--- a/index.html
+++ b/index.html
@@ -1,68 +1,89 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Qiu Qianye | Visual Storyteller</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
+    <title>邱谦业 | TERRY.OS</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&family=Noto+Sans+SC:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500;700&family=Noto+Sans+SC:wght@300;400;500;700&display=swap" rel="stylesheet">
     <script>
       tailwind.config = {
         theme: {
           extend: {
-            fontFamily: {
-              sans: ['Inter', 'Noto Sans SC', 'sans-serif'],
-            },
             colors: {
-              'brand-black': '#0a0a0a',
-              'brand-gray': '#f4f4f5',
-              'accent-blue': '#2563eb',
+              'oled-black': '#050505',
+              'oled-gray': '#111111',
+              'tech-orange': '#ff5500',
+              'tech-orange-dim': 'rgba(255, 85, 0, 0.1)',
+              'industrial-gray': '#888888',
+            },
+            fontFamily: {
+              mono: ['"JetBrains Mono"', 'monospace'],
+              sans: ['"Noto Sans SC"', 'sans-serif'],
             },
             animation: {
-              'float': 'float 6s ease-in-out infinite',
-              'spin-slow': 'spin 12s linear infinite',
+              'scanline': 'scanline 8s linear infinite',
+              'blink': 'blink 1s step-end infinite',
+              'slide-in': 'slideIn 0.3s cubic-bezier(0.16, 1, 0.3, 1)',
             },
             keyframes: {
-              float: {
-                '0%, 100%': { transform: 'translateY(0)' },
-                '50%': { transform: 'translateY(-20px)' },
+              scanline: {
+                '0%': { backgroundPosition: '0 0' },
+                '100%': { backgroundPosition: '0 100%' },
+              },
+              blink: {
+                '0%, 100%': { opacity: '1' },
+                '50%': { opacity: '0' },
+              },
+              slideIn: {
+                '0%': { transform: 'translateX(20px)', opacity: '0' },
+                '100%': { transform: 'translateX(0)', opacity: '1' },
               }
             }
-          },
-        },
+          }
+        }
       }
     </script>
     <style>
       body {
-        background-color: #ffffff;
-        color: #0a0a0a;
-        overflow-x: hidden;
+        background-color: #000;
+        margin: 0;
+        overflow: hidden; /* Prevent body scroll, handle inside device */
       }
-      /* Custom Scrollbar */
+      /* Custom Scrollbar for the terminal feel */
       ::-webkit-scrollbar {
-        width: 8px;
+        width: 4px;
       }
       ::-webkit-scrollbar-track {
-        background: #ffffff;
+        background: #111;
       }
       ::-webkit-scrollbar-thumb {
-        background: #d4d4d8;
-        border-radius: 4px;
+        background: #333;
       }
       ::-webkit-scrollbar-thumb:hover {
-        background: #a1a1aa;
+        background: #ff5500;
+      }
+      .scanlines {
+        background: linear-gradient(
+          to bottom,
+          rgba(255,255,255,0),
+          rgba(255,255,255,0) 50%,
+          rgba(0,0,0,0.1) 50%,
+          rgba(0,0,0,0.1)
+        );
+        background-size: 100% 4px;
+        pointer-events: none;
+      }
+      .crt-glow {
+        box-shadow: inset 0 0 100px rgba(0,0,0,0.9);
       }
     </style>
   <script type="importmap">
 {
   "imports": {
-    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.554.0",
+    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.555.0",
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "react": "https://aistudiocdn.com/react@^19.2.0",
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
-    "framer-motion": "https://aistudiocdn.com/framer-motion@^12.23.24",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/"
   }
 }
