--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
-    <title>邱谦业 | TERRY.OS</title>
+    <title>湫鱼 | TERRY.OS</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500;700&family=Noto+Sans+SC:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500;700&family=Noto+Sans+SC:wght@300;400;500;700;900&display=swap" rel="stylesheet">
     <script>
       tailwind.config = {
         theme: {
@@ -16,6 +16,8 @@
               'tech-orange': '#ff5500',
               'tech-orange-dim': 'rgba(255, 85, 0, 0.1)',
               'industrial-gray': '#888888',
+              'paper-white': '#f5f5f7',
+              'ink-black': '#1d1d1f',
             },
             fontFamily: {
               mono: ['"JetBrains Mono"', 'monospace'],
@@ -25,6 +27,8 @@
               'scanline': 'scanline 8s linear infinite',
               'blink': 'blink 1s step-end infinite',
               'slide-in': 'slideIn 0.3s cubic-bezier(0.16, 1, 0.3, 1)',
+              'wave': 'wave 4s linear infinite',
+              'spin-slow': 'spin 10s linear infinite',
             },
             keyframes: {
               scanline: {
@@ -38,6 +42,10 @@
               slideIn: {
                 '0%': { transform: 'translateX(20px)', opacity: '0' },
                 '100%': { transform: 'translateX(0)', opacity: '1' },
+              },
+              wave: {
+                '0%': { transform: 'translate(-50%, -50%) rotate(0deg)' },
+                '100%': { transform: 'translate(-50%, -50%) rotate(360deg)' },
               }
             }
           }
@@ -55,10 +63,11 @@
         width: 4px;
       }
       ::-webkit-scrollbar-track {
-        background: #111;
+        background: transparent;
       }
       ::-webkit-scrollbar-thumb {
         background: #333;
+        border-radius: 2px;
       }
       ::-webkit-scrollbar-thumb:hover {
         background: #ff5500;
@@ -76,6 +85,14 @@
       }
       .crt-glow {
         box-shadow: inset 0 0 100px rgba(0,0,0,0.9);
+      }
+      
+      /* Light Mode Specifics */
+      .light-mode ::-webkit-scrollbar-thumb {
+        background: #ccc;
+      }
+      .light-mode ::-webkit-scrollbar-thumb:hover {
+        background: #ff5500;
       }
     </style>
   <script type="importmap">
