--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
               'tech-orange': '#ff5500',
               'tech-orange-dim': 'rgba(255, 85, 0, 0.1)',
               'industrial-gray': '#888888',
-              'paper-white': '#f5f5f7',
+              'paper-white': '#f0f0f2', // Slightly darker for texture
               'ink-black': '#1d1d1f',
             },
             fontFamily: {
@@ -26,9 +26,10 @@
             animation: {
               'scanline': 'scanline 8s linear infinite',
               'blink': 'blink 1s step-end infinite',
-              'slide-in': 'slideIn 0.3s cubic-bezier(0.16, 1, 0.3, 1)',
-              'wave': 'wave 4s linear infinite',
+              'slide-in': 'slideIn 0.4s cubic-bezier(0.2, 0.8, 0.2, 1)',
+              'wave': 'wave 6s linear infinite',
               'spin-slow': 'spin 10s linear infinite',
+              'pulse-led': 'pulseLed 2s ease-in-out infinite',
             },
             keyframes: {
               scanline: {
@@ -40,13 +41,23 @@
                 '50%': { opacity: '0' },
               },
               slideIn: {
-                '0%': { transform: 'translateX(20px)', opacity: '0' },
-                '100%': { transform: 'translateX(0)', opacity: '1' },
+                '0%': { transform: 'translateY(10px)', opacity: '0' },
+                '100%': { transform: 'translateY(0)', opacity: '1' },
               },
               wave: {
                 '0%': { transform: 'translate(-50%, -50%) rotate(0deg)' },
                 '100%': { transform: 'translate(-50%, -50%) rotate(360deg)' },
+              },
+              pulseLed: {
+                '0%, 100%': { opacity: '0.5', boxShadow: '0 0 5px rgba(255,85,0,0.2)' },
+                '50%': { opacity: '1', boxShadow: '0 0 15px rgba(255,85,0,0.8)' },
               }
+            },
+            boxShadow: {
+              'neumorph-dark': '5px 5px 10px #0a0a0a, -5px -5px 10px #1a1a1a',
+              'neumorph-light': '5px 5px 10px #d1d1d1, -5px -5px 10px #ffffff',
+              'pressed-dark': 'inset 3px 3px 6px #0a0a0a, inset -3px -3px 6px #1a1a1a',
+              'pressed-light': 'inset 3px 3px 6px #d1d1d1, inset -3px -3px 6px #ffffff',
             }
           }
         }
@@ -56,9 +67,8 @@
       body {
         background-color: #000;
         margin: 0;
-        overflow: hidden; /* Prevent body scroll, handle inside device */
+        overflow: hidden;
       }
-      /* Custom Scrollbar for the terminal feel */
       ::-webkit-scrollbar {
         width: 4px;
       }
@@ -86,13 +96,29 @@
       .crt-glow {
         box-shadow: inset 0 0 100px rgba(0,0,0,0.9);
       }
-      
-      /* Light Mode Specifics */
       .light-mode ::-webkit-scrollbar-thumb {
         background: #ccc;
       }
       .light-mode ::-webkit-scrollbar-thumb:hover {
         background: #ff5500;
+      }
+      /* Utility for Noise Texture */
+      .bg-noise {
+        filter: url(#noiseFilter);
+      }
+      
+      /* 3D Transform Utilities */
+      .perspective-1000 {
+        perspective: 1000px;
+      }
+      .transform-style-3d {
+        transform-style: preserve-3d;
+      }
+      .backface-hidden {
+        backface-visibility: hidden;
+      }
+      .rotate-y-180 {
+        transform: rotateY(180deg);
       }
     </style>
   <script type="importmap">
@@ -108,6 +134,16 @@
 <link rel="stylesheet" href="/index.css">
 </head>
   <body>
+    <!-- SVG Noise Filter Definition -->
+    <svg style="display: none;">
+      <filter id="noiseFilter">
+        <feTurbulence type="fractalNoise" baseFrequency="0.8" numOctaves="3" stitchTiles="stitch"/>
+        <feColorMatrix type="saturate" values="0" />
+        <feComponentTransfer>
+           <feFuncA type="linear" slope="0.1" /> 
+        </feComponentTransfer>
+      </filter>
+    </svg>
     <div id="root"></div>
   <script type="module" src="/index.tsx"></script>
 </body>
