--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0, viewport-fit=cover" />
     <title>湫鱼 | TERRY.OS</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500;700&family=Noto+Sans+SC:wght@300;400;500;700;900&display=swap" rel="stylesheet">
@@ -64,10 +64,13 @@
       }
     </script>
     <style>
-      body {
-        background-color: #000;
+      html, body, #root {
+        height: 100%;
+        width: 100%;
         margin: 0;
+        padding: 0;
         overflow: hidden;
+        background-color: #000;
       }
       ::-webkit-scrollbar {
         width: 4px;
@@ -113,12 +116,15 @@
       }
       .transform-style-3d {
         transform-style: preserve-3d;
+        -webkit-transform-style: preserve-3d;
       }
       .backface-hidden {
         backface-visibility: hidden;
+        -webkit-backface-visibility: hidden;
       }
       .rotate-y-180 {
         transform: rotateY(180deg);
+        -webkit-transform: rotateY(180deg);
       }
     </style>
   <script type="importmap">
